tests/integration/cli/tests/snapshots/snapshot__snapshot_readdir_tree.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 575
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_readdir_tree",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [],
    "cli_args": [
      "/"
    ],
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "/\n  .app:\n  .private:\n  bin:\n    [\n    arch\n    b2sum\n    base32\n    base64\n    basename\n    basenc\n    cat\n    cksum\n    comm\n    coreutils\n    cp\n    csplit\n    cut\n    date\n    dd\n    dir\n    dircolors\n    dirname\n    echo\n    env\n    expand\n    expr\n    factor\n    false\n    fmt\n    fold\n    head\n    hostid\n    join\n    link\n    ln\n    ls\n    md5sum\n    mkdir\n    mktemp\n    mv\n    nice\n    nl\n    nohup\n    nproc\n    numfmt\n    od\n    paste\n    pathchk\n    pr\n    printenv\n    printf\n    ptx\n    pwd\n    readlink\n    realpath\n    rm\n    rmdir\n    seq\n    sha1sum\n    sha224sum\n    sha256sum\n    sha384sum\n    sha512sum\n    shred\n    shuf\n    sleep\n    sort\n    split\n    sum\n    tac\n    tail\n    tee\n    test\n    touch\n    tr\n    true\n    truncate\n    tsort\n    tty\n    uname\n    unexpand\n    uniq\n    unlink\n    vdir\n    wasmer\n    wc\n    yes\n  dev:\n    null\n    shm:\n    stderr\n    stdin\n    stdout\n    tty\n    urandom\n    zero\n  etc:\n  opt:\n    coreutils:\n  tmp:\n  usr:\n    bin:\n      [\n      arch\n      b2sum\n      base32\n      base64\n      basename\n      basenc\n      cat\n      cksum\n      comm\n      coreutils\n      cp\n      csplit\n      cut\n      date\n      dd\n      dir\n      dircolors\n      dirname\n      echo\n      env\n      expand\n      expr\n      factor\n      false\n      fmt\n      fold\n      head\n      hostid\n      join\n      link\n      ln\n      ls\n      md5sum\n      mkdir\n      mktemp\n      mv\n      nice\n      nl\n      nohup\n      nproc\n      numfmt\n      od\n      paste\n      pathchk\n      pr\n      printenv\n      printf\n      ptx\n      pwd\n      readlink\n      realpath\n      rm\n      rmdir\n      seq\n      sha1sum\n      sha224sum\n      sha256sum\n      sha384sum\n      sha512sum\n      shred\n      shuf\n      sleep\n      sort\n      split\n      sum\n      tac\n      tail\n      tee\n      test\n      touch\n      tr\n      true\n      truncate\n      tsort\n      tty\n      uname\n      unexpand\n      uniq\n      unlink\n      vdir\n      wasmer\n      wc\n      yes\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
