tests/integration/cli/tests/snapshots/snapshot__snapshot_sleep.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_sleep",
    "use_packages": [],
    "include_webcs": [],
    "cli_args": [],
    "debug_output": false,
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "before\ndone\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
