tests/integration/cli/tests/snapshots/snapshot__snapshot_stdin_stdout_stderr.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_stdin_stdout_stderr",
    "use_packages": [],
    "cli_args": [
      "tee",
      "/dev/stderr"
    ],
    "stdin": [
      98,
      108,
      97,
      104
    ],
    "debug_output": false,
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "blah",
      "stderr": "blah",
      "exit_code": 0
    }
  }
}
