tests/integration/cli/tests/snapshots/snapshot__snapshot_unix_pipe.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 552
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_unix_pipe",
    "use_packages": [],
    "include_webcs": [],
    "cli_args": [],
    "debug_output": false,
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "all done\n",
      "stderr": "received ErrorKind::WouldBlock\ndata matche verified (len=128)\nreceived ErrorKind::WouldBlock\ndata matche verified (len=128)\n",
      "exit_code": 0
    }
  }
}
