tests/integration/cli/tests/snapshots/snapshot__snapshot_vfork.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_vfork",
    "use_packages": [
      "sharrattj/coreutils"
    ],
    "include_webcs": [
      "./webc/bash-1.0.12-0103d733-1afb-4a56-b0ef-0e124139e996.webc",
      "./webc/coreutils-1.0.14-076508e5-e704-463f-b467-f3d9658fc907.webc",
      "./webc/dash-1.0.16-bd931010-c134-4785-9423-13c0a0d49d90.webc",
      "./webc/python-0.1.0.webc",
      "./webc/static-web-server-1.0.8-a241658c-e409-4749-872c-ae8eab142ef0.webc",
      "./webc/wasmer-sh-1.0.63-dd3d67d1-de94-458c-a9ee-caea3b230ccf.webc"
    ],
    "cli_args": [],
    "stdin": null,
    "debug_output": false,
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "Parent waiting on Child(2)\nChild(2) exited with 0\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
